Fix interleaved spacing

--- a/hakhel/hakhel.css
+++ b/hakhel/hakhel.css
@@ -144,7 +144,7 @@ div.tableContainer {
        break-inside: avoid;
   }
 
-  [data-split-notes]:not([data-split-notes=true]) .notes {
+  [data-compact-notes=true] .notes {
      letter-spacing: -.3px;
      word-spacing: -1.5px;
   }
@@ -156,3 +156,4 @@ div.tableContainer {
       display: none;
   }
 }
+
